--- a/docshub/src/pages/inicio.astro
+++ b/docshub/src/pages/inicio.astro
@@ -36,10 +36,12 @@ const { title, description, category, publishDate, docUrl, headings } =
 
 <ViewTransitions />
 
-<Sidebar />
 
-{headings && headings.length > 0 && <Headings headings={headings} />}
-<div class="flex flex-col xl:flex-row ml-0 justify-between">
+
+<!-- {headings && headings.length > 0 && <Headings headings={headings} />} -->
+<div class="flex flex-col xl:flex-row ml-0 justify-center">
+  <Sidebar />
+
   <PageContent
         title={title}
         description={description}
@@ -56,16 +58,19 @@ const { title, description, category, publishDate, docUrl, headings } =
       <h3 class="text-xl font-semibold">Last entries</h3>
     </div>
     
-    <div class="grid grid-cols-1 space-y-3">
+    <div class="flex flex-warp md:flex-col gap-2">
       
       {
         latestPost.slice(0, 6).map((post) => (
           <a
             href={post.slug}
-            class="flex flex-col gap-2 p-3 border border-gray-800 hover:bg-gray-700/30 transition-colors duration-100 rounded-md no-underline"
+            class="flex flex-col gap-2 p-3 border border-gray-800 hover:bg-gray-700/30 transition-colors duration-100 rounded-md no-underline w-[300px]"
           >
-            <span>
+            <span class="font-bold">
               {post.data.title}
+            </span>
+            <span class="text-sm">
+              {post.data.description}
             </span>
             
             <div class="flex gap-2 w-fit">
