--- a/docshub/src/components/sidebar/sidebar.astro
+++ b/docshub/src/components/sidebar/sidebar.astro
@@ -10,13 +10,13 @@ const pathname = new URL(Astro.request.url).pathname;
 
 <aside
   class={cx(
-    "transition-transform -translate-x-full z-40",
-    "hidden sm:translate-x-0",
-    "md:fixed md:left-0 md:w-64 md:h-full md:block",
+    // "transition-transform -translate-x-full z-40",
+    "hidden xl:translate-x-0",
+    "xl:flex max-w-[267px]",
   )}
 >
   <div
-    class="h-full px-2 py-2 overflow-y-auto bg-gray-900 border-r border-gray-800"
+    class="h-full px-2 py-2 overflow-y-auto bg-gray-900"
   >
     <SidebarContent client:only="react" docs={allDocs} pathname={pathname} />
   </div>
