wip: Add ToC-like sidenav for responsive mode

--- a/docshub/src/components/headings.astro
+++ b/docshub/src/components/headings.astro
@@ -16,7 +16,7 @@ const sharedHeadingClass = cx(
 
 <div
   class={cx(
-    "flex flex-col space-y-2 xl:rounded-md",
+    "hidden md:flex flex-col space-y-2 xl:rounded-md",
     // "max-h-[250px] xl:max-h-[calc(100vh-7rem)] overflow-auto overflow-y-auto",
     // "border-l border-gray-800 bg-gray-900",
     "mb-5 md:my-0 text-sm p-4",
