--- a/docshub/src/layouts/layoutDocs.astro
+++ b/docshub/src/layouts/layoutDocs.astro
@@ -34,6 +34,7 @@ const { title, description, category, publishDate, docUrl, headings } =
     category={category}
     publishDate={publishDate}
     url={docUrl}
+    headings={headings}
   >
     <slot />
   </PageContent>
