--- a/docshub/src/components/page-content.astro
+++ b/docshub/src/components/page-content.astro
@@ -36,7 +36,7 @@ const { title, description, category, publishDate, url, headings } = Astro.props
   )
 }
 
-<article class="py-0 w-full md:max-w-4xl">
+<article class="py-0 w-full xl:max-w-4xl">
   <div class="pb-4 border-x border-gray-800">
     <div class="flex flex-col space-y-3 mb-4 px-5 pt-5">
       <h1 class="text-3xl xl:text-4xl font-semibold">{title}</h1>
