feat: align container + sticky toc & menu

--- a/docshub/src/components/headings.astro
+++ b/docshub/src/components/headings.astro
@@ -2,7 +2,6 @@
 import type { MarkdownHeading } from "astro";
 import { cx } from "@/utils/cx";
 import TocIcon from "./ui/toc-icon.astro";
-// import { CornerDownLeftIcon, CornerDownRightIcon } from "lucide-react";
 
 interface Props {
   headings: MarkdownHeading[];
@@ -17,12 +16,9 @@ const sharedHeadingClass = cx(
 
 <div
   class={cx(
-    "hidden md:flex flex-col space-y-2 xl:rounded-md",
-    // "max-h-[250px] xl:max-h-[calc(100vh-7rem)] overflow-auto overflow-y-auto",
-    // "border-l border-gray-800 bg-gray-900",
+    "hidden xl:block xl:sticky xl:top-16 space-y-2 xl:rounded-md",
     "mb-5 md:my-0 text-sm p-4",
     "h-[calc(100vh-65px)] overflow-y-auto"
-    // "xl:fixed xl:my-0 xl:mx-0 xl:right-6 xl:top-[86px] md:ml-72",
   )}
 >
   <div class="flex items-center space-x-2 mb-1 opacity-70">
