--- a/docshub/src/components/navbar-top.astro
+++ b/docshub/src/components/navbar-top.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
 <nav
   class="bg-gray-900/80 backdrop-blur-md sticky top-0 w-full border-b border-gray-800 z-50"
 >
-  <div class="flex flex-wrap items-center justify-between px-2 md:px-4 h-16">
+  <div class="container flex flex-wrap items-center justify-between px-2 md:px-4 h-16">
     <div class="flex items-center space-x-3 rtl:space-x-reverse">
       <SidebarCollapse client:only="react">
         <SidebarContent
