--- a/docshub/src/layouts/layoutMain.astro
+++ b/docshub/src/layouts/layoutMain.astro
@@ -46,7 +46,7 @@ const { ...data } = Astro.props;
   </head>
   <body class="bg-gray-900 text-white antialiased font-sans">
     <NavbarTop title="DocsHub" />
-    <main class="my-3 md:my-0">
+    <main class="my-3 md:my-0 container">
       <slot />
     </main>
   </body>
