--- a/docshub/src/components/navbar-top.astro
+++ b/docshub/src/components/navbar-top.astro
@@ -11,6 +11,7 @@ import { buttonVariants } from "@/components/ui/button";
 
 import config from "docshub.config";
 import MiniBadge from "./ui/mini-badge.astro";
+import { cx } from "@/utils/cx";
 
 const allDocs = await getCollection("docs");
 const pathname = new URL(Astro.request.url).pathname;
@@ -20,12 +21,14 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+const truncateStyles="truncate max-w-[210px] sm:max-w-[300px] md:max-w-[500px] lg:max-w-[600px] xl:max-w-[800px] 2xl:max-w-full";
 ---
 
 <nav
   class="bg-gray-900/80 backdrop-blur-md sticky top-0 w-full border-b border-gray-800 z-50"
 >
-  <div class="container flex flex-wrap items-center justify-between px-2 md:px-4 h-16">
+  <div class="container flex items-center justify-between px-2 md:px-4 h-16">
     <div class="flex items-center space-x-3 rtl:space-x-reverse">
       <SidebarCollapse client:only="react">
         <SidebarContent
@@ -40,22 +43,27 @@ const { title } = Astro.props;
         src="/logo/docshub_transparent.png"
         alt="Docshub Logo"
       />
-      <a href="/" class="flex flex-col md:flex-row md:gap-2">
+      <a href="/" class="flex flex-col md:flex-row md:gap-2 max-w-full">
         <span
           class="md:text-xl text-base font-semibold whitespace-nowrap text-white"
-          >{title}
+        >
+          {title}
         </span>
-        <span
-          class="block md:pl-2 md:border-l border-gray-800 h-full self-center text-sm md:text-lg text-gray-300 whitespace-nowrap text-pretty"
+        <p
+          class={cx(
+            "block md:pl-2 md:border-l border-gray-800 self-center text-sm md:text-base text-gray-300 whitespace-nowrap overflow-hidden",
+            truncateStyles
+          )}
         >
           {config.documentationTitle}
-        </span>
+        </p>
         <div class="hidden md:flex items-center">
           <MiniBadge>
             <span class="tracking-tight">v{config.version}</span>
           </MiniBadge>
         </div>
       </a>
+      
     </div>
     { config.repository &&
       <div class="flex items-center px-2">
