--- a/docshub/src/components/page-content.astro
+++ b/docshub/src/components/page-content.astro
@@ -21,6 +21,7 @@ interface Props {
 }
 
 const { title, description, category, publishDate, url, headings } = Astro.props;
+
 ---
 
 {
@@ -29,7 +30,7 @@ const { title, description, category, publishDate, url, headings } = Astro.props
       <SidebarTocContent
         client:only="react"
         headings={headings}
-        pathname={''}
+        pathname={url}
         className="p-0"
       />
     </SidebarCollapse>
@@ -37,7 +38,7 @@ const { title, description, category, publishDate, url, headings } = Astro.props
 }
 
 <article class="py-0 w-full xl:max-w-4xl">
-  <div class="pb-4 border-x border-gray-800">
+  <div class="pb-4 xl:border-x xl:border-gray-800 h-full">
     <div class="flex flex-col space-y-3 mb-4 px-5 pt-5">
       <h1 class="text-3xl xl:text-4xl font-semibold">{title}</h1>
       <p class="text-gray-300 text-pretty">{description}</p>
