--- a/docshub/src/components/sidebar/sidebar.astro
+++ b/docshub/src/components/sidebar/sidebar.astro
@@ -10,12 +10,11 @@ const pathname = new URL(Astro.request.url).pathname;
 
 <aside
   class={cx(
-    "hidden xl:translate-x-0",
-    "xl:flex w-[375px]",
+    "xl:flex fixed h-full border-r border-gray-800"
   )}
 >
   <div
-    class="max-h-[calc(100vh-4rem)] xl:sticky top-16 px-2 py-2 overflow-y-auto bg-gray-900" 
+    class="px-2 overflow-y-auto bg-gray-900 py-5 pr-3" 
   >
     <SidebarContent client:only="react" docs={allDocs} pathname={pathname} />
   </div>
