--- a/docshub/src/components/ui/last-entries.astro
+++ b/docshub/src/components/ui/last-entries.astro
@@ -12,7 +12,7 @@ const latestPost = allDocs.sort((a, b) => {
 });
 ---
 
-<nav class="min-w-60 ml-5 py-3 ">
+<nav class="min-w-60 ml-5 py-3 mt-16">
     <div class="flex items-center gap-2 mb-3">
       <FlameIcon />
       <h3 class="text-xl font-semibold">Last entries</h3>
