refactor: tailwind container max-width

--- a/docshub/src/components/headings.astro
+++ b/docshub/src/components/headings.astro
@@ -15,11 +15,12 @@ const sharedHeadingClass = cx(
 
 <aside
   class={cx(
-    "text-sm h-screen",
+    "hidden xl:block",
+    "text-sm",
     "bg-gray-900 border-l border-gray-800"
   )}
 >
-  <nav class="sticky top-20 pl-4">
+  <nav class="sticky top-20 pl-4 w-[300px]">
     <div class="flex opacity-70 text-lg font-bold">
       <span>On this page</span>
     </div>
