--- a/docshub/src/components/sidebar/sidebar.astro
+++ b/docshub/src/components/sidebar/sidebar.astro
@@ -10,7 +10,7 @@ const pathname = new URL(Astro.request.url).pathname;
 
 <aside
   class={cx(
-    "xl:flex fixed h-full border-r border-gray-800"
+    "hidden xl:block fixed h-full border-r border-gray-800"
   )}
 >
   <div
