--- a/docshub/src/components/page-content.astro
+++ b/docshub/src/components/page-content.astro
@@ -38,10 +38,10 @@ const { title, description, category, publishDate, url, headings } = Astro.props
   )
 }
 
-<div class="ml-[270px] flex">
+<div class="xl:ml-[270px] flex min-h-[calc(100vh-65px)]">
   <article class="w-full">
     <div class="flex flex-col space-y-3 mb-4 px-5 pt-4">
-      <h1 class="text-3xl xl:text-4xl font-semibold">{title}</h1>
+      <h1 class="text-3xl xl:text-4xl font-semibold mr-7">{title}</h1>
       <p class="text-gray-300 text-pretty">{description}</p>
     </div>
     <div
