refactor: getting started page & layout

--- a/docshub/src/components/ui/last-entries.astro
+++ b/docshub/src/components/ui/last-entries.astro
@@ -12,10 +12,10 @@ const latestPost = allDocs.sort((a, b) => {
 });
 ---
 
-<nav class="min-w-60 ml-5 py-3 mt-16">
-    <div class="flex items-center gap-2 mb-3">
+<nav class="min-w-60 xl:ml-5 mt-4 xl:mt-0">
+    <div class="flex items-center gap-2 mb-2">
       <FlameIcon />
-      <h3 class="text-xl font-semibold">Last entries</h3>
+      <h3 class="my-0 text-xl font-semibold">Last entries</h3>
     </div>
     
     <div class="flex flex-row flex-wrap xl:flex-col gap-2">
