--- a/docshub/src/pages/index.astro
+++ b/docshub/src/pages/index.astro
@@ -4,6 +4,8 @@ import Inicio from "@/pages/inicio.astro";
 import InicioDoc from "./inicio.mdx";
 import defaultDocshubConfig from "docshub.config";
 import Sidebar from "@/components/sidebar/sidebar.astro";
+import { ContainerPage } from "@/components/ui/container-page";
+import { cx } from "@/utils/cx";
 
 const url = new URL(Astro.request.url).href;
 ---
@@ -12,13 +14,14 @@ const url = new URL(Astro.request.url).href;
   title={defaultDocshubConfig.documentationTitle}
   description={defaultDocshubConfig.documentationTitle}
 >
-  <Sidebar />
-  <Inicio
-    title={defaultDocshubConfig.documentationTitle}
-    description={defaultDocshubConfig.author || ''}
-    category="Introduction"
-    docUrl={url}
-  >
-    <InicioDoc />
-  </Inicio>
+  <article class={cx(ContainerPage, "h-full")}>
+    <Inicio
+      title={defaultDocshubConfig.documentationTitle}
+      description={defaultDocshubConfig.author || ''}
+      category="Introduction"
+      docUrl={url}
+    >
+      <InicioDoc />
+    </Inicio>
+  </article>
 </LayoutMain>
