fix: large code content

--- a/docshub/src/components/page-content.astro
+++ b/docshub/src/components/page-content.astro
@@ -76,7 +76,9 @@ const { title, description, category, publishDate, url, headings } = Astro.props
         "prose-headings:tracking-tight prose-heading:font-medium",
         "prose-a:decoration-gray-600 prose-a:decoration-dotted prose-a:underline-offset-[7px]",
         "prose-inline-code:rounded prose-inline-code:font-normal prose-inline-code:font-mono prose-inline-code:p-[2px] prose-inline-code:border prose-inline-code:border-gray-800 prose-inline-code:bg-gray-800/50",
-        "px-5"
+        "prose-code:break-words prose-code:text-wrap",
+        "px-5",
+        "prose-th:text-start"
       )}
     >
       <slot />
