--- a/docshub/src/components/mdx/alert/alert.astro
+++ b/docshub/src/components/mdx/alert/alert.astro
@@ -4,23 +4,22 @@ import { cx } from "@/utils/cx";
 
 interface Props {
   type: AlertType;
-  message: string;
 }
 
-const { type, message } = Astro.props;
+const { type } = Astro.props;
 ---
 
 <div
   role="alert"
   class={cx(
-    "border-l-8 pl-2 rounded-md my-2 py-3",
+    "border-l-4 pl-3 rounded-md my-2 py-3",
     "flex flex-col sm:flex-row sm:gap-2",
-    type === "success" && "bg-green-100 border-green-500 text-green-700",
-    type === "error" && "bg-red-100 border-red-500 text-red-700",
-    type === "warning" && "bg-yellow-100 border-yellow-500 text-yellow-700",
-    type === "info" && "bg-blue-100 border-blue-500 text-blue-700",
+    "relative",
+    type === "success" && "bg-green-200/80 border-green-500 text-green-800",
+    type === "error" && "bg-red-200/80 border-red-500 text-red-800",
+    type === "warning" && "bg-yellow-200/80 border-yellow-500 text-yellow-800",
+    type === "info" && "bg-blue-200/80 border-blue-500 text-blue-800",
   )}
 >
-  <p class="font-bold my-0">{type?.toUpperCase()}</p>
-  <p class="my-0">{message}</p>
+  <slot />
 </div>
