--- a/docshub/src/components/page-content.astro
+++ b/docshub/src/components/page-content.astro
@@ -70,7 +70,7 @@ const { title, description, category, publishDate, url, headings } =
     <section
       class={cx(
         "text-pretty",
-        "px-5",
+        "px-5 pb-3",
         "prose prose-invert max-w-full",
         "hover:prose-a:opacity-75",
         "md:prose-h1:text-4xl prose-h1:text-3xl prose-h1:font-semibold",
@@ -78,6 +78,7 @@ const { title, description, category, publishDate, url, headings } =
         "prose-a:decoration-gray-600 prose-a:decoration-dotted prose-a:underline-offset-[7px]",
         "prose-inline-code:rounded prose-inline-code:font-normal prose-inline-code:font-mono prose-inline-code:p-[2px] prose-inline-code:border prose-inline-code:border-gray-800 prose-inline-code:bg-gray-800/50",
         "prose-code:break-words prose-code:text-wrap",
+        "prose-pre:my-[3px]",
         "prose-th:text-start",
       )}
     >
